--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-certifi==2020.6.20
+certifi==2020.11.8
 chardet==3.0.4
 idna==2.10
 numpy==1.19.4
@@ -6,7 +6,8 @@ pandas==1.1.4
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.4
-requests==2.24.0
+requests==2.25.0
 six==1.15.0
-urllib3==1.25.11
+urllib3==1.26.2
 xlrd==1.2.0
+APScheduler~=3.6.3
